--- a/README
+++ b/README
@@ -1,2 +1,41 @@
 # IASC Valtio yjs example
 
+[valtio](https://github.com/pmndrs/valtio) is
+a proxy state library for ReactJS and VanillaJS.
+[yjs](https://github.com/yjs/yjs) is
+an implementation of CRDT algorithm
+(which allows to merge client data without server coordination).
+
+The idea of this project is to show a simple minimal example of what yjs can do.
+
+
+Docker Hub [repo](https://hub.docker.com/r/iascfrba/iasc-valtio-yjs-minimal-example)
+
+## How to run it locally?
+
+Just have (yarn)[https://yarnpkg.com/] and node installed on your local environment, then just run:
+
+```bash
+yarn init
+yarn install
+yarn start
+```
+
+
+## How to run it wiht docker?
+
+Build the image first
+
+```bash
+docker build -t iasc-valtio-yjs-minimal-example:latest .
+```
+
+then just run it
+
+```bash
+docker run --name iasc-valtio-yjs -d -p 3000:3000 iasc-valtio-yjs-minimal-example:latest
+```
+
+## Deploy with Vercel
+
+[![Deploy with Vercel](https://vercel.com/button)](https://vercel.com/new/git/external?repository-url=https%3A%2F%2Fgithub.com%2Fiasc-valtio-yjs-minimal-example%2Fiasc-valtio-yjs-minimal-example)
